<resources>
    <string name="tab_recommend">Recommend</string>
    <string name="tab_category">Category</string>
    <string name="tab_credit">Credit</string>
    <string name="tab_personal">Personal</string>
    <string name="search">Search</string>
    <string name="loan_apply_loan">APPLY NOW</string>
    <string name="loan_invest">INVEST NOW</string>
    <string name="please_input_username">Enter Username</string>
    <string name="please_input_password">Enter Password</string>
    <string name="please_input_password_again">Enter Password Again</string>
    <string name="login">Sign In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_up_account">Sign Up</string>
    <string name="please_enter_your_username_prompt">Please enter your username</string>
    <string name="please_enter_your_password_prompt">Please enter your password</string>
    <string name="please_enter_your_mobile_prompt">Please enter your mobile number</string>
    <string name="password_again_not_same">The password is inconsistent twice</string>
    <string name="please_input_mobile">Enter Mobile Number</string>
    <string name="sign_up_failure">Sign up failed</string>
    <string name="sign_up_success">Sign up success</string>
    <string name="sign_in_failure">Sign in failed</string>
    <string name="description">DESCRIPTION</string>
    <string name="next">NEXT</string>
    <string name="your_down_payment">Your Downpayment</string>
    <string name="quantity">Quantity</string>
    <string name="choose_duration">Choose Duration</string>
    <string name="full_price">Full Price</string>
    <string name="processing_fee_included">Processing fee included</string>
    <string name="buy_now">BUY NOW</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="repayment">Repayment</string>
    <string name="my_order">My Order</string>
    <string name="my_invest">My Investment</string>
    <string name="change_pwd">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="not_found">not found</string>
    <string name="investment_loan">Borrowing Investment</string>
    <string name="data_not_found">No Data Found</string>
    <string name="project_detail">Project Details</string>
    <string name="confirm_tender">Confirm</string>
    <string name="my_remainder_format">My Balance:%1$s</string>
    <string name="ok">Done</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_logout_prompt">OK to exit the current account</string>
    <string name="order_item_amount">Total:</string>
    <string name="goods_number_format">Total %1$d products</string>
    <string name="order_detail">Order Details</string>
    <string name="take_over_name">Consignee Name</string>
    <string name="take_over_address">Consignee Address</string>
    <string name="take_over_mobile">Mobile</string>
    <string name="take_over_remark">Remarks</string>
    <string name="please_fill_delivery_info">please fill in the receipt information</string>
    <string name="please_select_fenqi">please choose the staging</string>
    <string name="place_order_success">the purchase is successful</string>
    <string name="place_order_failure">failed purchase</string>
    <string name="advance_not_enough">Inadequate Prepayment</string>
    <string name="save">Save</string>
    <string name="please_input_new_password">Enter New Password</string>
    <string name="please_input_old_password">Enter Old Password</string>
    <string name="loans_apply">Apply For A Loan</string>
    <string name="loans_apply_title">Title:</string>
    <string name="loans_apply_use">Use:</string>
    <string name="loans_apply_amount">Amount:</string>
    <string name="loans_apply_repayment_cycle">Repayment Cycle:</string>
    <string name="loans_apply_term">Term:</string>
    <string name="loans_apply_apr">Interest Rate(%):</string>
    <string name="loans_apply_repayment">Repayment:</string>
    <string name="loans_apply_preparation">Deadline:</string>
    <string name="loans_apply_interest">Principal&amp;Interest:</string>
    <string name="loans_apply_description">Description:</string>
    <string name="loans_apply_submit">Submit</string>
    <string name="order_no">Order Number</string>
    <string name="order_time">Order Time</string>
    <string name="repay">Repayment</string>
    <string name="repay_list">Repayment List</string>
    <string name="repay_finish_list">Pay Off</string>
    <string name="address_title">Address：</string>
    <string name="please_input_pay_password">please enter payment password</string>
    <string name="repay_failure">Repayment Failed</string>
    <string name="repay_success">Repayment Success</string>
    <string name="remainder_not_enough">Insufficient Balance</string>
    <string name="password_change_success">Password change success</string>
    <string name="password_change_failure">Password change failed</string>
    <string name="available_money_title">Amount Available:</string>
    <string name="repayment_cycle_month_format">%1$s Months</string>
    <string name="day_format">%1$s Days</string>
    <string name="pay_password_error">pay the wrong password</string>
    <string name="take_photo_failure">failed to add photos</string>
    <string name="loan_apply_loan_success">Apply success</string>
    <string name="loan_apply_loan_failure">Apply failed</string>
    <string name="loans_apply_amount_prompt">3,000-1,000,000，a multiple of 50 is required</string>
    <string name="loans_apply_apr_prompt">accurate to a decimal point，between 10%-24%</string>
    <string name="loans_apply_description_prompt">Description must be greater than 10 characters</string>
    <string name="loans_apply_please_upload_photo">Please upload photos</string>
    <string name="loans_apply_please_write_info_complete">Please fill in the complete information</string>
    <string name="days">days</string>
    <string name="months">months</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="repayable">Repayable</string>
    <string name="repayment_date">Repayment Date</string>
    <string name="term">Term</string>
    <string name="repay_term_days_format">Term %1$s Days</string>
    <string name="repay_term_months_format">Term %1$s Months</string>
    <string name="amount">Amount</string>
    <string name="loading">Loading...</string>
    <string name="already_total_amount">Already Repayment</string>
    <string name="total_repayment">Total Repayment</string>
    <string name="confirm_the_repayment">Confirm</string>
    <string name="repayment_records_prompt">Repayment Records（Tips：Repayment should follow the first by the first return of the guidelines）</string>
    <string name="already_paid">Already Paid</string>
    <string name="management_fee">Management</string>
    <string name="principal_and_interest_repayment">Repayment</string>
    <string name="deal_status_wait">WAIT</string>
    <string name="deal_status_loading">LOANING</string>
    <string name="deal_status_full">FULL</string>
    <string name="deal_status_fail">FAIL</string>
    <string name="deal_status_repaymenting">REPAYMENTING</string>
    <string name="deal_status_repaymented">REPAYMENTED</string>
    <string name="loan_number">Loan Number</string>
    <string name="available_amount">Available Amount</string>
    <string name="minimum_amount">Min Amount</string>
    <string name="repayment_type">Repayment Type</string>
    <string name="time_left">Time Left</string>
    <string name="the_current_standard_can_not_invest">The current standard can not invest!</string>
    <string name="you_can_not_invest_for_yourself">You can not invest for yourself</string>
    <string name="available_balance">Available Balance</string>
    <string name="invest_amount">Invest Amount</string>
    <string name="min_invest_amount_prompt">The minimum invest amount of 50</string>
    <string name="pay_password">Pay Password</string>
    <string name="complete_schedule">Complete Schedule</string>
    <string name="the_invest_amount_can_not_be_empty">The invest amount can not be empty!</string>
    <string name="payment_password_can_not_be_empty">payment password can not be empty!</string>
    <string name="principal_and_interest">principal&amp;Interest</string>
    <string name="interest_bearing">Interest Bearing</string>
    <string name="due_principal_and_interest_due">Due Principal&amp;Interest Due</string>
    <string name="order_delivery_name">Name</string>
    <string name="order_delivery_mobile">Mobile</string>
    <string name="order_delivery_address">Address</string>
    <string name="order_goods_name">Goods Name</string>
    <string name="order_goods_property">Property</string>
    <string name="order_goods_price">Price</string>
    <string name="delivery_address">Delivery</string>
    <string name="add">Add</string>
    <string name="invest_success">Invest success</string>
    <string name="invest_failed">Invest failed</string>
    <string name="down_payment">Down Payment</string>
    <string name="not_shipped">Not yet shipped</string>
    <string name="shipped">Shipped</string>
    <string name="goods_signed_in">Signed in</string>
    <string name="unpaid">Unpaid</string>
    <string name="unknown">Unknown</string>
    <string name="confirm_receipt">Confirm receipt</string>
    <string name="confirm_receipt_prompt">Do you confirm the receipt of the goods</string>
    <string name="operation_succeeded">Operation succeeded</string>
    <string name="operation_failed">Operation failed</string>
    <string name="invest">Invest</string>
    <string name="invest_term">Term:</string>
    <string name="invest_apr">Rate(%):</string>
    <string name="invest_money">Amount:</string>
    <string name="invest_submit">Submit</string>
    <string name="recharge_succeeded">Recharge succeeded</string>
    <string name="recharge_failed">Recharge failed</string>
    <string name="recharge_term_month_format">%1$s Months</string>
    <string name="advance_not_enough_prompt">The balance is insufficient. Do you need to apply for a loan?</string>
    <string name="please_enter_remark">Please enter remark</string>
    <string name="not_available_delivery_prompt">No delivery address, please click on the add</string>
    <string name="please_add_the_delivery_address">Please add the delivery address</string>
    <string name="please_choose_the_method_of_payment">Please choose the method of payment</string>
    <string name="apply_rate_format">%1$s month * %2$s</string>
    <string name="apply_installment">Installment</string>
    <string name="apply_installment_name_format">%1$s Installment</string>
    <string name="apply_loan_enter_amount_prompt">Please enter the loan amount you would like to apply</string>
    <string name="apply_loan_name_format">Loan Request From %1$s</string>
    <string name="installment_scheme">Installment Scheme</string>
    <string name="apply_loan_upload_prompt">Please tap to upload your IC copy</string>
    <string name="please_enter_verifying_code">Please Code</string>
    <string name="get_verifying_code">Get Code</string>
    <string name="find_password">Find password</string>
    <string name="change_pay_password">Modify pay password</string>
    <string name="change_succeed">Change succeed</string>
    <string name="change_failed">Change failed</string>
    <string name="get_code_succeed">Verifying code has been sent</string>
    <string name="get_code_failed">Verification code failed</string>
    <string name="change_login_password">Modify the login password</string>
    <string name="withdraw">Withdraw</string>
    <string name="please_input_login_password">please enter login password</string>
    <string name="withdraw_amount">WithDraw Amount</string>
    <string name="serial_number">Serial Number</string>
</resources>