<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RootViewStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hbyundu.shop.ui.launcher.ForgetPwdActivity">

    <include layout="@layout/view_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/activity_forget_mobile_et"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/please_input_mobile"
            android:inputType="phone"
            android:singleLine="true"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/activity_forget_code_et"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:hint="@string/please_enter_verifying_code"
                android:inputType="phone"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/activity_forget_get_code_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginLeft="8dp"
                android:text="@string/get_verifying_code"/>

        </LinearLayout>

        <EditText
            android:id="@+id/activity_forget_password_et"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/please_input_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/activity_forget_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="20dp"
            android:text="@string/ok"
            android:theme="@style/Button.Blue" />

    </LinearLayout>

</LinearLayout>
