<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RootViewStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hbyundu.shop.ui.launcher.LoginActivity">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="551dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@color/colorTitleBar"
            android:gravity="center">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/activity_login_username_et"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:hint="@string/please_input_username"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:singleLine="true"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/activity_login_password_et"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/please_input_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:singleLine="true"
                android:maxLines="1"
                android:textSize="16sp" />

            <Button
                android:id="@+id/activity_login_submit_btn"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                android:theme="@style/Button.Blue" />

            <TextView
                android:id="@+id/activity_login_forget_tv"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|right"
                android:paddingRight="5dp"
                android:text="@string/forget_password" />

            <Button
                android:id="@+id/activity_login_register_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_border"
                android:text="@string/sign_up_account"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:elevation="0dp"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <ImageButton
            android:id="@+id/activity_login_close_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:src="@mipmap/ic_close" />

    </android.support.v7.widget.Toolbar>

</android.support.constraint.ConstraintLayout>
