<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RootViewStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.credit.invest.recharge.RechargeActivity">

    <include layout="@layout/view_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="3dp"
        android:background="@mipmap/fragment_item_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/invest_term"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/activity_recharge_term_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="3dp"
        android:background="@mipmap/fragment_item_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/invest_apr"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/activity_recharge_rate_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="3dp"
        android:background="@mipmap/fragment_item_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/invest_money"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/activity_recharge_amount_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/activity_recharge_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp"
        android:background="@color/colorTitleBar"
        android:text="@string/invest_submit"
        android:textColor="@color/colorRecommendTabTextSelected" />

</LinearLayout>
