<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serial_number"
            android:textColor="@color/text_gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/item_withdraw_list_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/text_orange"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_amount"
            android:textColor="@color/text_gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/item_withdraw_list_money_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="RM10"
            android:textColor="@color/text_orange"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/item_withdraw_list_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="日期"
            android:textColor="@color/text_gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/item_withdraw_list_action_tv"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:background="@mipmap/uc_fra_borrow_tv_bg1"
            android:gravity="center"
            android:text="@string/withdraw"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>